@@ -347,6 +347,8 @@ The following extensions are migrated into MediaWiki 1.14:
   list=categorymembers
 * (bug 16017) list=categorymembers sets invalid continue parameters for
   sortkeys containing pipes
+* (bug 16018) Added uccontinue parameter to list=usercontribs so paging
+  works properly when multiple users are queried or a userprefix is used
 
 === Languages updated in 1.14 ===
 
